# medixio-ia

./: .gitignore  main.py  pyproject.toml
app/bot/: __init__.py
app/bot/handlers/: commands.py  messages.py
app/core/: config.py
