[project]
name = "medixio-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "fastapi>=0.68.0,<1.0.0",
    "google-auth>=2.3.0",
    "google-genai>=1.0.0",
    "aiogram>=3.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.7.0",
    "uvicorn>=0.15.0",
    "httpx>=0.23.0",
    "python-multipart>=0.0.5",
]
